<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>games.sparking</groupId>
    <artifactId>Altara-Parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>Altara-Shared</module>
        <module>Altara-Paper</module>
        <module>Altara-Proxy</module>
        <module>Altara-Lobby</module>
        <module>Altara-Games</module>
        <module>Altara-Web</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependency versions -->
        <lombok.version>1.18.46</lombok.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <jedis.version>7.5.0</jedis.version>
        <mongodb.version>5.4.0</mongodb.version>
        <paper-api.version>1.21.4-R0.1-SNAPSHOT</paper-api.version>
        <velocity-api.version>3.4.0-SNAPSHOT</velocity-api.version>
        <okhttp.version>4.12.0</okhttp.version>
        <spring-boot.version>3.4.5</spring-boot.version>
        <packetevents.version>2.12.1</packetevents.version>
        <entitylib.version>3.3.2-SNAPSHOT</entitylib.version>
        <developertobi-entitylib.version>1.0-SNAPSHOT</developertobi-entitylib.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>pvphub-tofaa</id>
            <url>https://maven.pvphub.me/tofaa</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>pvphub-maven-tofaa</id>
            <name>PvPHub Maven</name>
            <url>https://maven.pvphub.me/tofaa</url>
        </repository>
        <repository>
            <id>github-developertobi-entitylib</id>
            <name>GitHub Packages – DeveloperTobi EntityLib</name>
            <url>https://maven.pkg.github.com/DeveloperTobi-Server/entity-library</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Altara Modules -->
            <dependency>
                <groupId>games.sparking</groupId>
                <artifactId>Altara-Shared</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>games.sparking</groupId>
                <artifactId>Altara-Paper</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Lombok (compile-time only) -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Apache Commons -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <!-- Redis (Jedis) -->
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${jedis.version}</version>
            </dependency>

            <!-- MongoDB Driver (all three artifacts must be the same version) -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>bson</artifactId>
                <version>${mongodb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-core</artifactId>
                <version>${mongodb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-sync</artifactId>
                <version>${mongodb.version}</version>
            </dependency>

            <!-- Paper API -->
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>${paper-api.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Velocity API -->
            <dependency>
                <groupId>com.velocitypowered</groupId>
                <artifactId>velocity-api</artifactId>
                <version>${velocity-api.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- OkHttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <!-- PacketEvents (provided — runs as its own server plugin) -->
            <dependency>
                <groupId>com.github.retrooper</groupId>
                <artifactId>packetevents-spigot</artifactId>
                <version>${packetevents.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- EntityLib (shaded into the plugin jar) -->
            <dependency>
                <groupId>io.github.tofaa2</groupId>
                <artifactId>spigot</artifactId>
                <version>${entitylib.version}</version>
            </dependency>

            <!-- DeveloperTobi EntityLib (GitHub Packages) -->
            <dependency>
                <groupId>net.developertobi.entitylib</groupId>
                <artifactId>entity-api</artifactId>
                <version>${developertobi-entitylib.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Dependencies available to every module -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
    </dependencies>

    <build>
        <!-- Include version.properties from the root of the multi-module project in every module JAR -->
        <resources>
            <resource>
                <directory>${maven.multiModuleProjectDirectory}</directory>
                <includes>
                    <include>version.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <!-- Compiler: Java 25 with Lombok annotation processing -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- Shade: fat JAR with package relocation -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                    <dependencies>
                        <!-- Override ASM to support Java 25 (class file major version 69) -->
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm</artifactId>
                            <version>9.8</version>
                        </dependency>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm-commons</artifactId>
                            <version>9.8</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>